--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^1.0.2-beta.4",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "moment": "^2.29.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
