--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "snapshare-webapp",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\""
+    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
+    "storybook": "start-storybook -s ./ -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.2-beta.4",
@@ -24,10 +25,18 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.12",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "0.0.11",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.0",
@@ -35,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "typescript": "^4.4.4"
   }
 }
